--- a/app/views/application/index.html.haml
+++ b/app/views/application/index.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %title bhf demo
+    %title bhf demo advanced
     = stylesheet_link_tag :application
     = csrf_meta_tags
   %body
@@ -9,9 +9,9 @@
       .row
         .col-md-9
           .bs-docs-section
-            %h1.page-header bhf demo
+            %h1.page-header bhf demo advanced
             
-            %p.lead This is a very simple Ruby on Rails project that demonstrates the <strong>bhf</strong> admin interface.
+            %p.lead This is a advanced Ruby on Rails project that demonstrates the <strong>bhf</strong> admin interface.
             
             %p.lead
               = link_to bhf.root_path, class: 'btn btn-primary big_button' do
@@ -21,16 +21,14 @@
               <br>
               password: <strong>bhf_pw</strong>
             
-            %p.lead Important file in this project:
+            %p.lead Important files in this project:
             %ul
               %li.lead
-                %a{href: 'https://github.com/antpaw/bhf-demo/blob/master/config/bhf.yml'} bhf.yml config
+                %a{href: 'https://github.com/antpaw/bhf-demo-advanced/blob/master/app/controllers/user_sessions_controller.rb'} user_sessions_controller.rb for authentification
               %li.lead
-                %a{href: 'https://github.com/antpaw/bhf-demo/blob/master/config/routes.rb'} routes.rb
+                %a{href: 'https://github.com/antpaw/bhf-demo-advanced/blob/master/config/bhf/abstract.yml'} abstract.yml config
               %li.lead
-                %a{href: 'https://github.com/antpaw/bhf-demo/blob/master/app/controllers/admin_controller.rb'} admin_controller.rb for authentification
-              %li.lead
-                %a{href: 'https://github.com/antpaw/bhf-demo/blob/master/config/initializers/bhf.rb'} bhf.rb initial settings
+                %a{href: 'https://github.com/antpaw/bhf-demo-advanced/blob/master/config/initializers/bhf.rb'} bhf.rb initial settings
 
 
             %hr.sep_hr
@@ -38,10 +36,11 @@
 
             %h3 More links:
             .row
-              = link_to '#', class: 'reset_link' do
+              = link_to 'https://github.com/antpaw/bhf-demo', class: 'reset_link' do
                 .col-sm-4
-                  %h4 Advanced demo
-                  %p Look at how powerful bhf can become with advanced configuration.
+                  %h4 Basic demo
+                  %p Look at a basic bhf project.
+              
               = link_to 'https://github.com/antpaw/bhf', class: 'reset_link' do
                 .col-sm-4
                   %h4 bhf gem on github
@@ -50,5 +49,4 @@
                 .col-sm-4
                   %h4 You can edit this content in #{link_to 'bhf', bhf.root_path}
                   %p= @static.content
-                  %p= bhf_edit(@static)
-        .col-md-3
+                  %p= bhf_edit(@static, user: current_user)
