--- a/app/views/application/index.html.haml
+++ b/app/views/application/index.html.haml
@@ -32,6 +32,11 @@
 
 
             %hr.sep_hr
+            
+            %h3= link_to 'bhf Guide and Documentation', 'https://antpaw.github.com/bhf/', class: 'btn btn-sec big_button'
+            %h3= link_to 'This App on GitHub', 'https://github.com/antpaw/bhf-demo-advanced/', class: 'btn btn-sec big_button'
+
+            %hr.sep_hr
 
 
             %h3 More links:
